before handling sebha tab

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -9,5 +9,6 @@
   "ahadeth": "الأحاديث",
   "quran": "القرآن",
   "hadethname": "اسم الحديث",
-  "selectyourlanguage": "اختر لغتك"
+  "selectyourlanguage": "اختر لغتك",
+  "numberoftasbih": "عدد التسبيحات"
 }
